--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview  --host 0.0.0.0"
+    "start": "vite  --host 0.0.0.0"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
